--- a/amazon-clone/package.json
+++ b/amazon-clone/package.json
@@ -15,7 +15,10 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "Router": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
