--- a/amazon-clone/package.json
+++ b/amazon-clone/package.json
@@ -11,6 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.0",
     "firebase": "^10.12.1",
+    "firebase-tools": "^13.10.1",
+    "glob": "^10.4.1",
+    "i": "^0.3.7",
     "numeral": "^2.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
